cambio en el index 2

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 
     <div class="container">
-        <h1>¡Hola! Soy Hendry Peguero Valdez</h1>
+        <h1>¡Hola! Soy Hendry Gustavo Peguero Valdez</h1>
         <p>Bienvenido a mi página personal. Soy un programador apasionado por resolver problemas a través del código. Disfruto trabajando en proyectos que implican el desarrollo de software eficiente y soluciones tecnológicas innovadoras.</p>
         <p>Me interesan varias áreas de la programación, incluyendo el desarrollo web y la creación de sistemas automatizados. Siempre estoy buscando maneras de mejorar mis habilidades técnicas y de encontrar el balance perfecto entre la programación, mis hobbies y el crecimiento profesional.</p>
         <p>Actualmente, estoy trabajando en diversos proyectos de software, enfocados en mejorar la eficiencia y la calidad de vida a través de la tecnología. Mi objetivo es seguir creando herramientas útiles que ayuden a las personas y a las empresas.</p>
